<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dimen_40dp"
    android:paddingBottom="@dimen/dimen_40dp"
    android:paddingStart="@dimen/dimen_24dp"
    android:paddingEnd="@dimen/dimen_24dp"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/mail_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mail_address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:hint="@string/mail_address_sample"
        android:autofillHints="email_address"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/mail_address_title"
        app:layout_constraintStart_toStartOf="@id/mail_address_title"/>

    <ImageView
        android:id="@+id/mail_address_feedback_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="center"
        android:contentDescription="@null"
        android:src="@drawable/ic_baseline_check_circle_24"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/mail_address_input"
        app:layout_constraintStart_toStartOf="@id/mail_address_input"
        app:layout_constraintBottom_toBottomOf="@id/mail_address_feedback"/>

    <TextView
        android:id="@+id/mail_address_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/mail_address_feedback_icon"
        app:layout_constraintTop_toBottomOf="@id/mail_address_input"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="@dimen/dimen_40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail_address_feedback"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:hint="@string/password_sample"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:layout_constraintStart_toStartOf="@id/password_title"/>

    <ImageView
        android:id="@+id/password_feedback_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="center"
        android:contentDescription="@null"
        android:src="@drawable/ic_baseline_check_circle_24"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintBottom_toBottomOf="@id/password_feedback"/>

    <TextView
        android:id="@+id/password_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/password_feedback_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="@dimen/dimen_40dp"
        app:layout_constraintTop_toTopOf="@id/password_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>